# Update-Installer

./: .gitignore  CMakeLists.txt  README.md
src/: AppInfo.cpp  AppInfo.h  CMakeLists.txt  DirIterator.cpp  FileUtils.cpp  FileUtils.h  Platform.h  ProcessUtils.cpp  StandardDirs.cpp  UpdateController.cpp  UpdateController.h  UpdateDialogCocoa.h  UpdateDialogCocoa.mm  UpdateDialogGtk.h  UpdateDialogGtkFactory.cpp  UpdateDialogGtkWrapper.cpp  UpdateDialogGtkWrapper.h  UpdateDialogWin32.cpp  UpdateDialogWin32.h  UpdateInstaller.cpp  UpdateInstaller.h  UpdaterOptions.cpp  main.cpp
src/tests/: CMakeLists.txt  TestFileUtils.cpp  TestFileUtils.h  file_list.xml  test-update.rb  v2_file_list.xml
tools/: README  config-template.js  create-packages.rb
tools/tests/: README.txt  auto-create-packages.rb  config.js  create-packages.rb  test_p1.bat  test_p2.bat  test_p3.bat
tools/tests/test_v2/: test0.txt  test3.txt
tools/tests/test_v3/: test3.txt  test4.txt  test5.txt
tools/tests/test_v4/: test3.txt
